--- a/css/utilities.css
+++ b/css/utilities.css
@@ -15,19 +15,106 @@
 .btn:hover{
   opacity: .9;
 }
-.btn-primary{
+.btn-primary, .bg-primary{
   background-color: #28a745;
   color:#fff;
 }
-.btn-secondary{
+.btn-secondary, .bg-secondary{
   background-color: #0284d0;
   color:#fff;
 }
-.btn-dark{
+.btn-dark, .bg-dark{
   background-color: #333;
   color:#fff;
 }
-.btn-light{
-  background-color: #fff;
+.btn-light, .bg-light{
+  background-color: #f4f4f4;
   color:#333;
 }
+.btn-outline{
+  background-color: transparent;
+  border:1px solid #fff;
+  color:#fff;
+}
+.flex-items{
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  text-align: center;
+  height: 100%;
+}
+.flex-items > div{
+  padding: 20px;
+}
+.flex-columns.flex-reverse .row{
+  flex-direction: row-reverse;
+}
+.flex-columns .row {
+  display: flex;
+  flex-direction: row;
+  flex-wrap: wrap;
+  /* width: 100%; */
+}
+
+.flex-columns .column {
+  display: flex;
+  flex-direction: column;
+  /* flex-basis: 100%; */
+  flex: 1;
+}
+
+.flex-columns .column .column-1,
+.flex-columns .column .column-2 {
+  height: 100%;
+}
+.flex-columns img{
+  width: 100%;
+  height: 100%;
+  object-fit: cover;
+}
+.flex-columns .column .column-2{
+  display: flex;
+  flex-flow: column;
+  align-items: flex-start;
+  justify-content: center;
+  padding: 30px;
+}
+.flex-columns h2{
+  font-size: 40px;
+  font-weight: 100;
+
+} 
+.flex-columns h4{
+  margin-bottom: 15px;
+}
+.flex-columns p{
+  margin:15px 0;
+}
+
+ .section-header{
+  padding:30px;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  text-align: center;
+}
+.section-header h2{
+  font-size: 40px;
+  margin:20px 0;
+}
+.section-padding{
+  padding:20px 20px 40px;
+}
+.flex-grid .row{
+  display: flex;
+  flex-wrap: wrap;
+  padding:0 4px;
+
+}
+.flex-grid .column{
+ max-width:25%;
+ flex:25%;
+  padding:0 4px;
+}
+
